# regexevaluatorqt

./: CMakeLists.txt  README.md  main.cpp  regexengine.cpp  regexengine.h  regexenginestd.cpp  regexenginestd.h  regexwidget.cpp  regexwidget.h  widget.ui
